--- a/Graphs/packages.config
+++ b/Graphs/packages.config
@@ -4,7 +4,8 @@
   <package id="Alea.CUDA.IL" version="2.2.0.3307" targetFramework="net452" />
   <package id="Alea.CUDA.Unbound" version="2.2.0.3307" targetFramework="net452" />
   <package id="Alea.IL" version="2.2.0.3307" targetFramework="net452" />
-  <!--<package id="FSharp.Core" version="3.1.2.5" targetFramework="net452" />-->
+  <package id="FsCheck" version="2.4.0" targetFramework="net452" />
   <package id="MathNet.Numerics" version="3.11.0" targetFramework="net452" />
   <package id="MathNet.Numerics.FSharp" version="3.11.0" targetFramework="net452" />
+  <package id="NUnit" version="3.2.1" targetFramework="net452" />
 </packages>
