--- a/Graphs/Graphs.fsproj
+++ b/Graphs/Graphs.fsproj
@@ -102,6 +102,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
   </ItemGroup>
