--- a/Graphs/DirGraph/packages.config
+++ b/Graphs/DirGraph/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Alea.CUDA" version="2.2.0.3307" targetFramework="net452" />
+  <package id="Alea.CUDA.IL" version="2.2.0.3307" targetFramework="net452" />
+  <package id="Alea.CUDA.Unbound" version="2.2.0.3307" targetFramework="net452" />
+  <package id="Alea.IL" version="2.2.0.3307" targetFramework="net452" />
   <package id="FsCheck" version="2.4.0" targetFramework="net452" />
 </packages>
