--- a/Graphs/DirGraph/DirGraph.fsproj
+++ b/Graphs/DirGraph/DirGraph.fsproj
@@ -53,6 +53,7 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="dirGraph.fs" />
+    <Compile Include="visualizer.fs" />
     <None Include="dirGraphPropertyTest.fsx" />
     <None Include="dirGraphTest.fsx" />
     <Content Include="packages.config" />
