--- a/Graphs/DirGraph/DirGraph.fsproj
+++ b/Graphs/DirGraph/DirGraph.fsproj
@@ -57,6 +57,7 @@
     <None Include="dirGraphPropertyTest.fsx" />
     <None Include="dirGraphTest.fsx" />
     <Content Include="packages.config" />
+    <None Include="debruijn.fsx" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Alea.CUDA">
