Edges on the GPU

--- a/GpuEuler/packages.config
+++ b/GpuEuler/packages.config
@@ -4,4 +4,5 @@
   <package id="Alea.CUDA.IL" version="2.2.0.3307" targetFramework="net452" />
   <package id="Alea.CUDA.Unbound" version="2.2.0.3307" targetFramework="net452" />
   <package id="Alea.IL" version="2.2.0.3307" targetFramework="net452" />
+  <package id="FsCheck" version="2.5.0" targetFramework="net452" />
 </packages>
