--- a/Graphs/DirGraph/packages.config
+++ b/Graphs/DirGraph/packages.config
@@ -4,5 +4,6 @@
   <package id="Alea.CUDA.IL" version="2.2.0.3307" targetFramework="net452" />
   <package id="Alea.CUDA.Unbound" version="2.2.0.3307" targetFramework="net452" />
   <package id="Alea.IL" version="2.2.0.3307" targetFramework="net452" />
-  <package id="FsCheck" version="2.4.0" targetFramework="net452" />
+  <package id="FsCheck" version="2.5.0" targetFramework="net452" />
+  <package id="FSharp.Core" version="3.1.2.5" targetFramework="net452" />
 </packages>
