--- a/Graphs/DirGraph/DirGraph.fsproj
+++ b/Graphs/DirGraph/DirGraph.fsproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="dirGraph.fs" />
     <Compile Include="visualizer.fs" />
+    <Compile Include="DataGen.fs" />
     <None Include="dirGraphPropertyTest.fsx" />
     <None Include="dirGraphTest.fsx" />
     <Content Include="packages.config" />
@@ -86,7 +87,7 @@
       <HintPath>..\..\..\..\Emgu\emgucv-windesktop_x64-cuda 3.1.0.2282\bin\Emgu.CV.World.dll</HintPath>
     </Reference>
     <Reference Include="FsCheck">
-      <HintPath>..\..\packages\FsCheck.2.4.0\lib\net45\FsCheck.dll</HintPath>
+      <HintPath>..\..\packages\FsCheck.2.5.0\lib\net45\FsCheck.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="mscorlib" />
