--- a/GpuCompact/GpuCompact.fsproj
+++ b/GpuCompact/GpuCompact.fsproj
@@ -5,14 +5,14 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>3359d25f-850a-47c3-a662-8fb2e96a16bc</ProjectGuid>
+    <ProjectGuid>0dbdea6c-0796-40f8-9c21-dd0598b213c5</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>GpuEuler</RootNamespace>
-    <AssemblyName>GpuEuler</AssemblyName>
+    <RootNamespace>GpuCompact</RootNamespace>
+    <AssemblyName>GpuCompact</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <TargetFSharpCoreVersion>4.4.0.0</TargetFSharpCoreVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Name>GpuEuler</Name>
+    <Name>GpuCompact</Name>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
@@ -24,7 +24,7 @@
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <DocumentationFile>bin\Debug\GpuEuler.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\GpuCompact.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -33,7 +33,7 @@
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <DocumentationFile>bin\Release\GpuEuler.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\GpuCompact.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
@@ -59,12 +59,9 @@
     <Error Condition="!Exists('..\packages\Alea.CUDA.2.2.0.3307\build\Alea.CUDA.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Alea.CUDA.2.2.0.3307\build\Alea.CUDA.targets'))" />
   </Target>
   <ItemGroup>
-    <Compile Include="successor.fs" />
-    <None Include="GpuEulerTests.fsx" />
-    <None Include="Perf.fsx" />
+    <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="GpuCompact.fs" />
     <Content Include="packages.config" />
-    <None Include="Scripts\load-references-debug.fsx" />
-    <None Include="Scripts\load-project-debug.fsx" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Alea.CUDA">
@@ -83,41 +80,13 @@
       <HintPath>..\packages\Alea.IL.2.2.0.3307\lib\net40\Alea.IL.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Emgu.CV.UI">
-      <HintPath>..\..\..\Emgu\emgucv-windesktop_x64-cuda 3.1.0.2282\bin\Emgu.CV.UI.dll</HintPath>
-    </Reference>
-    <Reference Include="Emgu.CV.World">
-      <HintPath>..\..\..\Emgu\emgucv-windesktop_x64-cuda 3.1.0.2282\bin\Emgu.CV.World.dll</HintPath>
-    </Reference>
-    <Reference Include="FsCheck">
-      <HintPath>..\packages\FsCheck.2.5.0\lib\net45\FsCheck.dll</HintPath>
+    <Reference Include="mscorlib" />
+    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <Private>True</Private>
     </Reference>
-    <Reference Include="mscorlib" />
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
-    <ProjectReference Include="..\GpuCompact\GpuCompact.fsproj">
-      <Name>GpuCompact</Name>
-      <Project>{0dbdea6c-0796-40f8-9c21-dd0598b213c5}</Project>
-      <Private>True</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\GpuSort\GpuSort.fsproj">
-      <Name>GpuSort</Name>
-      <Project>{8437015f-05c1-4a5f-9fb2-c115236e659c}</Project>
-      <Private>True</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\Graphs\DirGraph\DirGraph.fsproj">
-      <Name>DirGraph</Name>
-      <Project>{cbd5b36f-44e7-4fb1-8b90-b73992c9c397}</Project>
-      <Private>True</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\Graphs\DrawGraph\DrawGraph.fsproj">
-      <Name>DrawGraph</Name>
-      <Project>{f8cfd85a-aeaf-47e4-8c5d-43669a7c00bf}</Project>
-      <Private>True</Private>
-    </ProjectReference>
   </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
