--- a/GpuEuler/GpuEuler.fsproj
+++ b/GpuEuler/GpuEuler.fsproj
@@ -60,11 +60,11 @@
   </Target>
   <ItemGroup>
     <Compile Include="successor.fs" />
-    <None Include="GpuEulerTests.fsx" />
-    <None Include="Perf.fsx" />
     <Content Include="packages.config" />
     <None Include="Scripts\load-references-debug.fsx" />
     <None Include="Scripts\load-project-debug.fsx" />
+    <None Include="Scripts\GpuEulerTests.fsx" />
+    <None Include="Scripts\Perf.fsx" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Alea.CUDA">
