--- a/GpuCompact/GpuCompact.fsproj
+++ b/GpuCompact/GpuCompact.fsproj
@@ -63,6 +63,9 @@
     <Compile Include="GpuCompact.fs" />
     <Content Include="packages.config" />
     <Compile Include="GpuDistinct.fs" />
+    <None Include="Scripts\load-references-debug.fsx" />
+    <None Include="Scripts\load-project-debug.fsx" />
+    <None Include="Scripts\CompactTest.fsx" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Alea.CUDA">
@@ -86,17 +89,16 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\GpuSort\GpuSort.fsproj">
       <Name>GpuSort</Name>
       <Project>{8437015f-05c1-4a5f-9fb2-c115236e659c}</Project>
       <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
