--- a/GpuEuler/GpuEuler.fsproj
+++ b/GpuEuler/GpuEuler.fsproj
@@ -62,6 +62,7 @@
     <Compile Include="successor.fs" />
     <Compile Include="partition.fs" />
     <Compile Include="gcedges.fs" />
+    <Compile Include="bfs.fs" />
     <Content Include="packages.config" />
     <None Include="Scripts\load-references-debug.fsx" />
     <None Include="Scripts\load-project-debug.fsx" />
