--- a/GpuSort/GpuSort.fsproj
+++ b/GpuSort/GpuSort.fsproj
@@ -67,6 +67,8 @@
     <None Include="Scripts\SortTest.fsx" />
     <None Include="Scripts\SortDUT.fsx" />
     <None Include="Scripts\BlockScanSampleTest.fsx" />
+    <None Include="Scripts\load-references-release.fsx" />
+    <None Include="Scripts\load-project-release.fsx" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Alea.CUDA">
