--- a/GpuEuler/GpuEuler.fsproj
+++ b/GpuEuler/GpuEuler.fsproj
@@ -65,7 +65,7 @@
     <Compile Include="successor.fs" />
     <Compile Include="partition.fs" />
     <Compile Include="cgedges.fs" />
-    <Compile Include="bfs.fs" />
+    <Compile Include="swips.fs" />
     <Compile Include="swaps.fs" />
     <Compile Include="euler.fs" />
     <Content Include="packages.config" />
