refactoring adding fscharting

--- a/GpuEuler/packages.config
+++ b/GpuEuler/packages.config
@@ -6,6 +6,7 @@
   <package id="Alea.IL" version="2.2.0.3307" targetFramework="net452" />
   <package id="EmguCV" version="3.1.0.1" targetFramework="net452" />
   <package id="FsCheck" version="2.5.0" targetFramework="net452" />
+  <package id="FSharp.Charting" version="0.90.14" targetFramework="net452" />
   <package id="OpenTK" version="1.1.2225.0" targetFramework="net452" />
   <package id="OpenTK.GLControl" version="1.1.2225.0" targetFramework="net452" />
   <package id="ZedGraph" version="5.1.5" targetFramework="net452" />
