--- a/GpuEuler/GpuEuler.fsproj
+++ b/GpuEuler/GpuEuler.fsproj
@@ -62,11 +62,10 @@
     <Error Condition="!Exists('..\packages\EmguCV.3.1.0.1\build\EmguCV.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EmguCV.3.1.0.1\build\EmguCV.targets'))" />
   </Target>
   <ItemGroup>
-    <Compile Include="successor.fs" />
+    <Compile Include="predecessor.fs" />
     <Compile Include="partition.fs" />
     <Compile Include="cgedges.fs" />
     <Compile Include="swips.fs" />
-    <Compile Include="swaps.fs" />
     <Compile Include="euler.fs" />
     <Content Include="packages.config" />
     <None Include="Scripts\load-references-debug.fsx" />
@@ -81,6 +80,7 @@
     <None Include="Scripts\load-project-release.fsx" />
     <None Include="Scripts\eulerTest.fsx" />
     <None Include="Scripts\eulerPerf.fsx" />
+    <None Include="Scripts\eulerChart.fsx" />
     <Content Include="OpenTK.dll.config" />
   </ItemGroup>
   <ItemGroup>
@@ -114,6 +114,10 @@
     </Reference>
     <Reference Include="FsCheck">
       <HintPath>..\packages\FsCheck.2.5.0\lib\net45\FsCheck.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="FSharp.Charting">
+      <HintPath>..\packages\FSharp.Charting.0.90.14\lib\net40\FSharp.Charting.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="mscorlib" />
