--- a/GpuEuler/GpuEuler.fsproj
+++ b/GpuEuler/GpuEuler.fsproj
@@ -81,6 +81,7 @@
     <None Include="Scripts\eulerChart.fsx" />
     <None Include="Scripts\eulerTestAuto.fsx" />
     <None Include="Scripts\genTest.fsx" />
+    <None Include="Scripts\debruijn.fsx" />
     <Content Include="OpenTK.dll.config" />
   </ItemGroup>
   <ItemGroup>
