--- a/Graphs/DrawGraph/DrawGraph.fsproj
+++ b/Graphs/DrawGraph/DrawGraph.fsproj
@@ -59,6 +59,8 @@
     <None Include="Scripts\drawGraphsTest.fsx" />
     <None Include="Scripts\load-references-release.fsx" />
     <None Include="Scripts\load-project-release.fsx" />
+    <None Include="Scripts\load-references-debug.fsx" />
+    <None Include="Scripts\load-project-debug.fsx" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Emgu.CV.UI">
