--- a/GpuEuler/GpuEuler.fsproj
+++ b/GpuEuler/GpuEuler.fsproj
@@ -82,6 +82,7 @@
     <None Include="Scripts\eulerTestAuto.fsx" />
     <None Include="Scripts\genTest.fsx" />
     <None Include="Scripts\debruijn.fsx" />
+    <None Include="Scripts\scratch.fsx" />
     <Content Include="OpenTK.dll.config" />
   </ItemGroup>
   <ItemGroup>
