--- a/GpuEuler/packages.config
+++ b/GpuEuler/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Alea.CUDA" version="2.2.0.3307" targetFramework="net452" />
+  <package id="Alea.CUDA.Fody" version="2.2.0.3307" targetFramework="net452" developmentDependency="true" />
   <package id="Alea.CUDA.IL" version="2.2.0.3307" targetFramework="net452" />
   <package id="Alea.CUDA.Unbound" version="2.2.0.3307" targetFramework="net452" />
   <package id="Alea.IL" version="2.2.0.3307" targetFramework="net452" />
   <package id="EmguCV" version="3.1.0.1" targetFramework="net452" />
+  <package id="Fody" version="1.28.3" targetFramework="net452" developmentDependency="true" />
   <package id="FsCheck" version="2.5.0" targetFramework="net452" />
   <package id="FSharp.Charting" version="0.90.14" targetFramework="net452" />
   <package id="OpenTK" version="1.1.2225.0" targetFramework="net452" />
